# csgrs

./: .gitignore  .rustfmt.toml  CLEANUP_SUMMARY.md  Cargo.toml  LICENSE  PCB_MIGRATION.md  PERFORMANCE.md  PORTING_PLAN.md  adversarial.txt  debug_clip_test.rs  debug_union_test.rs  readme.md  shapes.md  simple_debug.rs  test_cube_normals.rs  test_intersection.rs  test_splitting.rs  typos.toml
.cargo/: config.toml
.github/actions/hyper-workspace/: action.yml
.github/workflows/: adversarial.yml  rust.yml
adapters/: Cargo.toml  README.md
adapters/benches/: graphics_export.rs
adapters/src/: lib.rs  mesh.rs  profile.rs  scalar.rs
benches/: feature_pipeline.rs  kernel_comparison.rs  mesh_pipeline.rs  part_blueprint.rs  profile_primitives.rs
benches/support/: mod.rs
benchmarks/: CROSS_KERNEL_COVERAGE.md  README.md  WORKLOADS.md  run.sh  summarize.py
benchmarks/data/yeahright/: README.md  README.txt
benchmarks/native/: CMakeLists.txt  cgal.cpp  common.hpp  opencascade.cpp
bindings/: README.md
bindings/cpp/: csgrs.hpp
bindings/go/: csgrs.go
bindings/js/: csgrs.ts
bindings/python/: csgrs.py
csgrs-wasm/: Cargo.toml  README.md
csgrs-wasm/src/: lib.rs
csgrs-wasm/starter-templates/nuxt4/app/: app.vue
docs/: IndexedMesh_README.md  adr.md  checklist.md  prd.md  srs.md  unified_connectivity_preservation.md
examples/: A_right_triangle.rs  B_extrude_vector.rs  E_center.rs  F_float.rs  G_inverse.rs  H_tessellate.rs  I_slice.rs  J_vertices.rs  K_reuleaux_polygon.rs  L_rotate_extrude.rs  M_mirror.rs  N_scale.rs  O_transform.rs  P_offset.rs  README.md  README_indexed_mesh_main.md  adjacency_demo.rs  airfoil.rs  arrow.rs  b-spline.rs  basic2d_shapes_&_offsetting.rs  basic2d_shapes_and_offsetting.rs  basic_shapes.rs  bevy_mesh.rs  bezier_curve.rs  boolean_operations.rs  circle_with_flat.rs  circle_with_keyway.rs  convex_hull.rs  cube_corner_difference_test.rs  cube_corner_intersection_test.rs  debug_bsp_vertex_indices.rs  distribute_arc.rs  distribute_grid.rs  distribute_linear.rs  egg.rs  ellipse_and_ellipsoid.rs  extrude.rs  from_image.rs  gears.rs  (+29 more)
examples/nuxt4/: nuxt.config.ts  package-lock.json  package.json
examples/wasm-nuxt4/: README.md  nuxt.config.ts  package-lock.json  package.json
examples/wasm-nuxt4/app/: app.vue
examples/wasm-nuxt4/components/: Viewer.vue
examples/wasm-nuxt4/composables/: useCsgrsJs.ts
ffi/: Cargo.toml  README.md
ffi/include/: csgrs.h
ffi/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dxf_import.rs  fuzz_export_names.rs  fuzz_gerber_import.rs  fuzz_mesh_boolean_pair.rs  fuzz_mesh_bytecode.rs  fuzz_mesh_hypermesh_adapter.rs  fuzz_mesh_polyhedron_constructor.rs  fuzz_mesh_primitive_catalog.rs  fuzz_metaballs_boundary.rs  fuzz_obj_import.rs  fuzz_part_blueprint.rs  fuzz_plane_split_polygon.rs  fuzz_sdf_tpms.rs  fuzz_sketch_boolean_pair.rs  fuzz_sketch_extrude_revolve_sweep.rs  fuzz_sketch_polygon_triangulate.rs  fuzz_sketch_shape_catalog.rs  fuzz_svg_import.rs  fuzz_toolpath_from_sketch.rs  fuzz_transform_matrix.rs  fuzz_vertex_arithmetic.rs  fuzz_vertex_quality.rs
nix/: shell.nix
scripts/: adversarial-long.sh  adversarial-medium.sh  adversarial.sh
src/: aabb.rs  bsp.rs  convex_hull.rs  csg.rs  csg_io.rs  errors.rs  extrudes.rs  flatten_slice.rs  float_types.rs  hershey.rs  hyper_math.rs  image.rs  lib.rs  main.rs  math_ndsp.rs  metaballs.rs  offset.rs  plane.rs  polygon.rs  robust_predicates.rs  sdf.rs  shapes2d.rs  shapes3d.rs  tests.rs  tpms.rs  traits.rs  triangulated.rs  truetype.rs  vertex.rs  wasm.rs
src/IndexedMesh/: bsp.rs  bsp_connectivity.rs  bsp_parallel.rs  connectivity.rs  convex_hull.rs  flatten_slice.rs  manifold.rs  metaballs.rs  mod.rs  plane.rs  polygon.rs  quality.rs  sdf.rs  shapes.rs  smoothing.rs  tpms.rs  vertex.rs
src/bmesh/: mod.rs  triangulated.rs
src/cavalier/: mod.rs
src/io/: amf.rs  dxf.rs  gerber.rs  gltf.rs  image.rs  mod.rs  obj.rs  ply.rs  stl.rs  svg.rs  vrml.rs
src/mesh/: bsp.rs  bsp_parallel.rs  connectivity.rs  convex_hull.rs  extrudes.rs  flatten_slice.rs  hypermesh.rs  manifold.rs  mesh.rs  metaballs.rs  mod.rs  plane.rs  polygon.rs  quality.rs  sdf.rs  shapes.rs  smoothing.rs  tpms.rs  triangulated.rs  vertex.rs
src/mesh/algorithm/: mod.rs
src/mesh/bsp/: mod.rs  node.rs  parallel.rs  serial.rs  traits.rs
src/nurbs/: mod.rs  nurbs.rs
src/parts/: blueprint.rs  metadata.rs  mod.rs
src/polygon_mesh/: extrudes.rs  mod.rs  plane.rs  polygon.rs  shapes.rs
src/sdf/: metaballs.rs  mod.rs  sdf.rs  tpms.rs
src/shapes/: mod.rs  shapes2d.rs  shapes3d.rs
src/sketch/: airfoil.rs  extrudes.rs  hershey.rs  image.rs  metaballs.rs  mod.rs  offset.rs  shapes.rs  sketch.rs  triangulated.rs  truetype.rs
src/tests/: bug_tests.rs  cavalier_tests.rs  csg_tests.rs  dispatch_trace_tests.rs  extrude_slice_tests.rs  flatten_slice_tests.rs  mesh_quality_tests.rs  metadata_tests.rs  misc_tests.rs  mod.rs  node_tests.rs  offset_tests.rs  ownership_tests.rs  parts_tests.rs  plane_tests.rs  polygon_tests.rs  sketch_region_tests.rs  support.rs  vertex_tests.rs
src/toolpath/: mod.rs
src/voxels/: mod.rs
src/wasm/: matrix.rs  matrix_js.rs  mesh.rs  mesh_js.rs  metaballs_js.rs  mod.rs  plane.rs  plane_js.rs  point_js.rs  polygon.rs  polygon_js.rs  sketch.rs  sketch_js.rs  vector_js.rs  vertex.rs  vertex_js.rs
tests/: adversarial.rs  adversarial_deep.rs  adversarial_extrusions.rs  adversarial_fixtures.rs  adversarial_stress.rs  bug_tests.rs  completed_components_validation.rs  csg_tests.rs  edge_case_csg_tests.rs  feature_chull_io_tests.rs  feature_offset_tests.rs  feature_stl_io_tests.rs  feature_truetype_text_tests.rs  indexed_mesh_edge_cases.rs  indexed_mesh_flatten_slice_validation.rs  indexed_mesh_gap_analysis_tests.rs  indexed_mesh_tests.rs  mesh_tests.rs  metaballs_diagnostics.rs  metadata_tests.rs  misc_tests.rs  no_open_edges_validation.rs  node_and_clipping_tests.rs  node_tests.rs  normal_orientation_test.rs  perfect_manifold_validation.rs  plane_tests.rs  polygon_tests.rs  readme_render_regression.rs  sdf_tpms_diagnostics.rs
tests/support/: mod.rs
(+26 files in other folders)
