[package]
name = "csgrs"
version = "0.22.0"
edition = "2024"
description = "Constructive solid geometry (CSG) on meshes using BSP trees in Rust"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
# msrv
rust-version = "1.95.0"

license = "MIT"
repository = "https://github.com/timschmidt/csgrs"
readme = "readme.md"

keywords = ["geometry", "physics", "csg", "slicing", "offsetting"]
categories = ["game-development", "graphics", "mathematics", "simulation", "wasm"]

[package.metadata.docs.rs]
no-default-features = true
features = [
  "mesh",
  "sketch",
  "stl-io",
  "dxf-io",
  "obj-io",
  "ply-io",
  "amf-io",
  "gltf-io",
  "gerber-io",
  "svg-io",
  "chull-io",
  "image-io",
  "metaballs",
  "sdf",
  "offset",
  "truetype-text",
  "hershey-text",
  "wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
overflow-checks = false

[profile.embedded]
inherits = "release"
opt-level = "z"

[dependencies]
# geometry
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
#alum = "0.6.1"
chull = { version = "0.2.4", optional = true }
hypercurve = { version = "0.2.0", features = ["triangulation"] }
hyperlattice = { version = "0.5.0" }
hypermesh = { version = "0.2.0", default-features = false, features = ["exact"] }
hyperphysics = { version = "0.2.0" }
hyperreal = { version = "0.12.0", default-features = false }
hypertri = { version = "0.2.0", default-features = false, features = ["earcut"] }
rapier3d-f64 = { version = "0.31.0" }
parry3d-f64  = { version = "0.25.3" }

# bevy mesh conversion
bevy_mesh = { version = "0.18", optional = true }
bevy_asset = { version = "0.18", optional = true }
wgpu-types = { version = "27", optional = true, default-features = false }

# utils
rayon = { version = "1.10", optional = true }
thiserror = "2.0"
hashbrown = { version = "0.15" }
fast-surface-nets = { version = "0.2.1", optional = true }
contour_tracing = { version = "1.0.12", features = ["array"], optional = true }
either = "1.15"
base64 = { version = "0.22", optional = true }
# doc
#doc-image-embed = "0.2" # fork of https://crates.io/crates/embed-doc-image - should be upstreamed.

# io/load
dxf = { version = "0.6", optional = true }
stl_io = { version = "0.8", optional = true }
image = { version = "0.25", optional = true }
svg = { version = "0.18", optional = true }
nom = { version = "7.1", optional = true }
gerber-types = { version = "0.7.0", optional = true }
gerber_parser = { version = "0.4.0", optional = true }

# font
ttf-utils = { version = "0.1", optional = true, package = "ttf-parser-utils"}
ttf-parser = { version = "0.25", optional = true }
hershey = { version = "0.1.2", optional = true }

doc-image-embed = "0.2.1"

# wasm
uuid = { version = "1.18", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3.81", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde_json = { version = "1.0.145", optional = true }
serde = { version = "1.0.228", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.18", features = ["js"] }

[features]
default = ["mesh", "sketch", "stl-io", "dxf-io", "obj-io", "ply-io", "amf-io", "gltf-io", "gerber-io", "chull-io", "image-io", "metaballs", "sdf", "truetype-text", "hershey-text"]
parallel = [
  "rayon",
  "hashbrown/rayon",
  "parry3d-f64/parallel",
  "rapier3d-f64/parallel"
]
mesh = [
  # BSP backed Mesh datatype
  "sketch",
]
mesh-bbopt = [
  # Enable bounding box optimization for Mesh BSP
]
sketch = [
  # hypercurve backed Sketch datatype
]
# convex hull and minkowski sum
chull-io = [
  "chull",
]
stl-io = [
  "sketch",
  "stl_io",
]
svg-io = [
  "sketch",
  "svg",
  "nom", # Parsing of things not covered by the `svg` crate
]
dxf-io = [
  "sketch",
  "dxf",
]
obj-io = [
  "sketch",
  # OBJ format support - no external dependencies needed
]
ply-io = [
  "sketch",
  # PLY format support - no external dependencies needed
]
amf-io = [
  "sketch",
  # AMF format support - no external dependencies needed
]
gltf-io = [
  "sketch",
  "base64",
]
gerber-io = [
  "sketch",
  "gerber-types",
  "gerber_parser",
]
truetype-text = [
  "ttf-parser",
  "ttf-utils",
]
hershey-text = [
  "hershey",
]
image-io = [
  "image",
  "contour_tracing",
  "svg-io",
]
metaballs = [
  "fast-surface-nets",
]
sdf = [
  "fast-surface-nets",
]
offset = [
  "sketch",
]
bevymesh = [
  "dep:bevy_mesh",
  "dep:bevy_asset",
  "dep:wgpu-types"
]
wasm = [
  "mesh",
  "sketch",
  "svg-io",
  "stl-io",
  "amf-io",
  "gltf-io",
  "chull-io",
  "sdf",
  "uuid",
  "wasm-bindgen",
  "js-sys",
  "serde-wasm-bindgen",
  "serde_json",
  "serde",
]

[[example]]
name = "readme_renders"
required-features = [
  "mesh",
  "sketch",
  "image-io",
  "truetype-text",
  "metaballs",
  "sdf",
  "offset",
  "chull-io",
]

[dev-dependencies]
proptest = "1.9"
