[package]
name = "csgrs"
version = "0.23.0"
edition = "2024"
description = "Constructive solid geometry (CSG) on meshes composed from hyper geometry crates"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
# msrv
rust-version = "1.95.0"

license = "MIT"
repository = "https://github.com/timschmidt/csgrs"
readme = "readme.md"

keywords = ["geometry", "physics", "csg", "slicing", "offsetting"]
categories = ["game-development", "graphics", "mathematics", "simulation", "wasm"]

[package.metadata.docs.rs]
no-default-features = true
features = [
  "mesh",
  "sketch",
  "stl-io",
  "dxf-io",
  "obj-io",
  "ply-io",
  "amf-io",
  "gltf-io",
  "gerber-io",
  "svg-io",
  "chull-io",
  "image-io",
  "metaballs",
  "sdf",
  "offset",
  "truetype-text",
  "hershey-text",
  "wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "part_blueprint"
harness = false

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
overflow-checks = false

[profile.embedded]
inherits = "release"
opt-level = "z"

[dependencies]
# geometry
#alum = "0.6.1"
chull = { version = "0.2.4", optional = true }
# Hyper sibling dependency switch: keep both local path and crates.io lines; do not remove either.
# Development mode uses the local path lines. For release, comment those and uncomment the crates.io lines.
hypercurve = { path = "../hypercurve", features = ["triangulation"] }
hyperlattice = { path = "../hyperlattice" }
hyperlimit = { path = "../hyperlimit" }
hypermesh = { path = "../hypermesh" }
hyperphysics = { path = "../hyperphysics" }
hyperreal = { path = "../hyperreal", default-features = false }
hypersdf = { path = "../hypersdf", optional = true }
hypertri = { path = "../hypertri", default-features = false, features = ["earcut"] }
# hypercurve = { version = "0.3.0", features = ["triangulation"] }
# hyperlattice = { version = "0.6.0" }
# hyperlimit = { version = "0.4.0" }
# hypermesh = { version = "0.3.0", default-features = false, features = ["exact"] }
# hyperphysics = { version = "0.3.0" }
# hyperreal = { version = "0.13.0", default-features = false }
# hypersdf = { version = "0.2.0", optional = true }
# hypertri = { version = "0.3.0", default-features = false, features = ["earcut"] }
# bevy mesh conversion
bevy_mesh = { version = "0.18", optional = true }
bevy_asset = { version = "0.18", optional = true }
wgpu-types = { version = "27", optional = true, default-features = false }

# utils
rayon = { version = "1.10", optional = true }
thiserror = "2.0"
hashbrown = { version = "0.15" }
fast-surface-nets = { version = "0.2.1", optional = true }
contour_tracing = { version = "1.0.12", features = ["array"], optional = true }
either = "1.15"
base64 = { version = "0.22", optional = true }
# doc
#doc-image-embed = "0.2" # fork of https://crates.io/crates/embed-doc-image - should be upstreamed.

# io/load
dxf = { version = "0.6", optional = true }
stl_io = { version = "0.8", optional = true }
image = { version = "0.25", optional = true }
svg = { version = "0.18", optional = true }
nom = { version = "7.1", optional = true }
gerber-types = { version = "0.7.0", optional = true }
gerber_parser = { version = "0.4.0", optional = true }

# font
ttf-utils = { version = "0.1", optional = true, package = "ttf-parser-utils"}
ttf-parser = { version = "0.25", optional = true }
hershey = { version = "0.1.2", optional = true }

doc-image-embed = "0.2.1"

# wasm
uuid = { version = "1.18", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3.81", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde_json = { version = "1.0.145", optional = true }
serde = { version = "1.0.228", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.18", features = ["js"] }

[features]
default = ["mesh", "sketch", "stl-io", "dxf-io", "obj-io", "ply-io", "amf-io", "gltf-io", "gerber-io", "chull-io", "image-io", "metaballs", "sdf", "truetype-text", "hershey-text"]
parallel = [
  "rayon",
  "hashbrown/rayon"
]
mesh = [
  # hypermesh backed Mesh datatype
  "sketch",
]
# Legacy BSP transition compatibility features removed after full hypermesh migration.
sketch = [
  # hypercurve backed Profile datatype
]
# convex hull and minkowski sum
chull-io = [
  "chull",
]
stl-io = [
  "sketch",
  "stl_io",
]
svg-io = [
  "sketch",
  "svg",
  "nom", # Parsing of things not covered by the `svg` crate
]
dxf-io = [
  "sketch",
  "dxf",
]
obj-io = [
  "sketch",
  # OBJ format support - no external dependencies needed
]
ply-io = [
  "sketch",
  # PLY format support - no external dependencies needed
]
amf-io = [
  "sketch",
  # AMF format support - no external dependencies needed
]
gltf-io = [
  "sketch",
  "base64",
]
gerber-io = [
  "sketch",
  "gerber-types",
  "gerber_parser",
]
truetype-text = [
  "ttf-parser",
  "ttf-utils",
]
hershey-text = [
  "hershey",
]
image-io = [
  "image",
  "contour_tracing",
  "svg-io",
]
metaballs = [
  "fast-surface-nets",
]
sdf = [
  "fast-surface-nets",
  "hypersdf",
]
offset = [
  "sketch",
]
bevymesh = [
  "dep:bevy_mesh",
  "dep:bevy_asset",
  "dep:wgpu-types"
]
wasm = [
  "mesh",
  "sketch",
  "svg-io",
  "stl-io",
  "amf-io",
  "gltf-io",
  "chull-io",
  "sdf",
  "uuid",
  "wasm-bindgen",
  "js-sys",
  "serde-wasm-bindgen",
  "serde_json",
  "serde",
]

[[example]]
name = "readme_renders"
required-features = [
  "mesh",
  "sketch",
  "image-io",
  "truetype-text",
  "metaballs",
  "sdf",
  "offset",
  "chull-io",
]

[dev-dependencies]
proptest = "1.9"
