[package]
name = "csgrs"
version = "0.23.0"
edition = "2024"
description = "Constructive solid geometry (CSG) on meshes composed from hyper geometry crates"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
# msrv
rust-version = "1.95.0"

license = "MIT"
repository = "https://github.com/timschmidt/csgrs"
readme = "readme.md"

keywords = ["geometry", "physics", "csg", "slicing", "offsetting"]
categories = ["game-development", "graphics", "mathematics", "simulation", "wasm"]

[package.metadata.docs.rs]
no-default-features = true
features = [
  "mesh",
  "polygon-mesh",
  "sketch",
  "stl-io",
  "dxf-io",
  "obj-io",
  "ply-io",
  "amf-io",
  "gltf-io",
  "vrml-io",
  "gerber-io",
  "svg-io",
  "image-io",
  "metaballs",
  "sdf",
  "offset",
  "truetype-text",
  "hershey-text",
  "wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "part_blueprint"
harness = false

[[bench]]
name = "mesh_pipeline"
harness = false

[[bench]]
name = "kernel_comparison"
harness = false

[[bench]]
name = "feature_pipeline"
harness = false
required-features = [
  "mesh",
  "sketch",
  "stl-io",
  "dxf-io",
  "obj-io",
  "ply-io",
  "amf-io",
  "gltf-io",
  "svg-io",
  "image-io",
  "metaballs",
  "sdf",
  "offset",
  "truetype-text",
  "hershey-text",
  "bevymesh",
]

[[bench]]
name = "profile_primitives"
harness = false
required-features = ["sketch"]

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
overflow-checks = false

[profile.embedded]
inherits = "release"
opt-level = "z"

[dependencies]
# geometry
#alum = "0.6.1"
hypercurve = { version = "0.3.0", path = "../hypercurve", features = ["triangulation"] }
hyperlattice = { version = "0.6.0", path = "../hyperlattice" }
hyperlimit = { version = "0.4.0", path = "../hyperlimit" }
hypermesh = { version = "0.1.0", path = "../hypermesh" }
hyperphysics = { version = "0.3.0", path = "../hyperphysics" }
hyperreal = { version = "0.13.1", path = "../hyperreal", default-features = false, features = ["cached-f64-approx"] }
hypersdf = { version = "0.2.0", path = "../hypersdf", optional = true }
hypertri = { version = "0.4.0", path = "../hypertri", default-features = false, features = ["earcut"] }
# bevy mesh conversion
bevy_mesh = { version = "0.18", optional = true }
bevy_asset = { version = "0.18", optional = true }
wgpu-types = { version = "27", optional = true, default-features = false }

# utils
rayon = { version = "1.10", optional = true }
thiserror = "2.0"
hashbrown = { version = "0.15" }
fast-surface-nets = { version = "0.2.1", optional = true }
either = "1.15"
base64 = { version = "0.22", optional = true }
# doc
#doc-image-embed = "0.2" # fork of https://crates.io/crates/embed-doc-image - should be upstreamed.

# io/load
chrono = { version = "0.4", optional = true }
dxf = { version = "0.6", optional = true }
stl_io = { version = "0.8", optional = true }
image = { version = "0.25", optional = true }
gerber-types = { version = "0.7.0", optional = true }
gerber_parser = { version = "0.4.0", optional = true }

# font
ttf-utils = { version = "0.1", optional = true, package = "ttf-parser-utils"}
ttf-parser = { version = "0.25", optional = true }
hershey = { version = "0.1.2", optional = true }

doc-image-embed = "0.2.1"

# wasm
uuid = { version = "1.18", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3.81", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde_json = { version = "1.0.145", optional = true }
serde = { version = "1.0.228", optional = true }
gltf = { version = "1.4.1", optional = true, default-features = false, features = ["names", "utils"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.18", features = ["js"] }

# Keep transitive sibling crates unified while using local path development mode.
[patch.crates-io]
hyperlattice = { path = "../hyperlattice" }
hyperlimit = { path = "../hyperlimit" }
hyperreal = { path = "../hyperreal" }
hypertri = { path = "../hypertri" }
hypersolve = { path = "../hypersolve" }

[features]
default = ["mesh", "polygon-mesh", "sketch", "stl-io", "dxf-io", "obj-io", "ply-io", "amf-io", "gltf-io", "vrml-io", "gerber-io", "image-io", "metaballs", "sdf", "truetype-text", "hershey-text"]
dispatch-trace = [
  "hypercurve/dispatch-trace",
  "hypermesh/dispatch-trace",
  "hyperreal/dispatch-trace",
]
parallel = [
  "rayon",
  "hashbrown/rayon"
]
mesh = [] # Compatibility feature; Mesh is the always-available core carrier.
polygon-mesh = [] # Planar polygon 3D backend; converts explicitly to triangle Mesh geometry.
# Legacy BSP transition features removed after full hypermesh migration.
sketch = [
  # hypercurve backed Profile datatype
]
stl-io = [
  "stl_io",
]
svg-io = [
  "sketch",
  "hypercurve/svg",
]
dxf-io = [
  "sketch",
  "chrono",
  "dxf",
]
obj-io = [
  # OBJ format support - no external dependencies needed
]
ply-io = [
  # PLY format support - no external dependencies needed
]
amf-io = [
  # AMF format support - no external dependencies needed
]
gltf-io = [
  "base64",
  "serde_json",
  "dep:gltf",
]
vrml-io = [
  # VRML 2.0 geometry import - no external dependencies needed
]
gerber-io = [
  "sketch",
  "gerber-types",
  "gerber_parser",
]
truetype-text = [
  "ttf-parser",
  "ttf-utils",
]
hershey-text = [
  "hershey",
]
image-io = [
  "image",
  "sketch",
]
metaballs = [
  "fast-surface-nets",
]
sdf = [
  "fast-surface-nets",
  "hypersdf",
]
# Compatibility feature retained for existing consumers. Offset operations are
# native Hypercurve APIs and no longer activate an external geometry backend.
offset = ["sketch"]
bevymesh = [
  "dep:bevy_mesh",
  "dep:bevy_asset",
  "dep:wgpu-types"
]
wasm = [
  "mesh",
  "polygon-mesh",
  "sketch",
  "svg-io",
  "stl-io",
  "amf-io",
  "gltf-io",
  "sdf",
  "uuid",
  "wasm-bindgen",
  "js-sys",
  "serde-wasm-bindgen",
  "serde_json",
  "serde",
]

[[example]]
name = "readme_renders"
required-features = [
  "mesh",
  "sketch",
  "image-io",
  "truetype-text",
  "metaballs",
  "sdf",
  "offset",
]

[dev-dependencies]
ply-rs = "0.1.3"
proptest = "1.9"
quick-xml = "0.39.4"
