[package]
name = "csgrs-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
# Use the real path or version from crates.io; enable csgrs's wasm feature
csgrs = { path = "../", version = "0.20.1", default-features = true }

# Optional niceties
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = "0.3.81"
serde-wasm-bindgen = "0.6.5"

[features]
default = []
